add custom hooks

--- a/src/components/Todopage/TodoForm/TodoForm.module.css
+++ b/src/components/Todopage/TodoForm/TodoForm.module.css
@@ -9,5 +9,10 @@
 }
 
 .formBtn {
-	@apply w-fit self-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center;
+	@apply inline-block px-6 py-2.5 
+  bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md 
+  hover:bg-blue-700 hover:shadow-lg 
+  focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 
+  active:bg-blue-800 active:shadow-lg 
+  transition duration-150 ease-in-out;
 }
